--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,9 @@ body {
 
 /* Limitar el ancho de las cajas de contenido */
 .info-boxes {
-  width: 90%;
   margin: 0 auto;
+  width: 90%;
+  max-width: 800px;
 }
 @media (min-width: 768px) {
   .info-boxes {
@@ -97,7 +98,7 @@ input {
 
 .canvas-container {
   width: 100%;
-  max-width: 900px;
+  max-width: 700px;
   margin: 0 auto;
 }
 
@@ -200,11 +201,12 @@ input {
     max-width: 50%;
     background-color: #fff; /* Fondo blanco para la imagen */
     text-align: center;
+    margin: 0 auto;
   }
 }
 .diagram-box img,
 .diagram-image img {
-  max-width: 100%;
+  max-width: 70%;
   height: auto;
   display: inline-block;
 }
